--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script>
+	function validate() {
+		$('.container input').each(function() {
+		  var $this = $(this);
+		  if ($this.val() == "") {
+			$this.css('border', '1px solid red');
+			$this.attr("placeholder", "Field must be filled out");
+			$this.addClass('error');
+		  } else {
+			$this.css('border', '#ccc');
+		  }
+		});
+		return false;
+	}
+  </script>
 </head>
 <body>
 
@@ -28,7 +43,7 @@
     </div>
 	<div class="form-group">
       <label class="control-label col-sm-2" for="comment">Комментарий:</label>
-      <div class="col-sm-10">          
+      <div class="col-sm-10">
         <input type="textarea" class="form-control" id="comment" placeholder="Комментарий" name="comment">
       </div>
     </div>
@@ -45,7 +60,7 @@
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" id="submitButton" onclick="return validate();">Submit</button>
       </div>
     </div>
 	
