--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script>
 	function validate() {
+	    var res = true;
 		$('.container input').each(function() {
 		  var $this = $(this);
 		  if ($this.val() == "") {
 			$this.css('border', '1px solid red');
 			$this.attr("placeholder", "Field must be filled out");
 			$this.addClass('error');
+			if (res) {
+			  res = false;
+			}
 		  } else {
 			$this.css('border', '#ccc');
 		  }
 		});
+		return res;
+	}
+  </script>
+  <script> 
+	 function addRow() {
+	    if (validate()) { 
+			$('#tbl tr:last').after('<tr><td>' + $('#name').val() +'</td><td>' + $('#surname').val() +'</td><td>' + $('input[name=sex]:checked').val() +'</td><td>' + $('#comment').val() +'</td></tr>');
+		}
 		return false;
 	}
   </script>
@@ -51,22 +63,22 @@
       <label class="control-label col-sm-2" for="sex">Пол:</label>
       <div class="col-sm-10">
         <div class="radiogroup">
-          <label><input type="radio" name="optradio" id="sex" checked> Мужской</label>
+          <label><input type="radio" name="sex" id="sexM" value="Мужской" checked> Мужской</label>
         </div>
         <div class="radiogroup">
-          <label><input type="radio" name="optradio" id="sex"> Женский</label>
+          <label><input type="radio" name="sex" id="sexF" value="Женский"> Женский</label>
         </div>
       </div>
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default" id="submitButton" onclick="return validate();">Submit</button>
+        <button type="submit" class="btn btn-default" id="submitButton" onclick="return addRow();">Submit</button>
       </div>
     </div>
 	
     <div class="container">
     <h2>Пользователи</h2>
-    <table class="table table-bordered">
+    <table class="table table-bordered" id="tbl">
       <thead>
         <tr>
           <th>Имя</th>
