--- a/src/main/webapp/ajax.html
+++ b/src/main/webapp/ajax.html
@@ -14,11 +14,11 @@
     function sendGreeting() {
         $.ajax({
             type: 'GET',
-            url: 'http://localhost:8080/dreamjob/greet',
+            url: 'http://localhost:8080/dreamjob/json',
             data: 'name=' + $('#exampleInputEmail1').val(),
-            dataType: 'text'
+            dataType: 'json'
         }).done(function(data) {
-            $('#lbl').before('<p>' + data + '</p>');
+            $('#lbl').before('<p>' + data.text + data.name + '</p>');
         }).fail(function(err){
             alert(err);
         });
